# RiffExt

./: CMakeLists.txt  README.md  riffext.c  riffext_win.c  riffscan.c
RiffExt/: Args.h  CMakeLists.txt  Main.cpp  RIFF.h
